--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.15",
     "appwrite": "^21.2.1",
     "debounce": "^2.2.0",
     "react": "^19.1.1",
